// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/toggle/ToggleField should render isOn=false with value=null 1`] = `
<Toggle
  isOn={false}
  label="Enter things"
  name="toggle"
  onBlur="onblur"
  onChange="onchange"
  value={null}
/>
`;

exports[`components/toggle/ToggleField should render isOn=false with value=undefined 1`] = `
<Toggle
  isOn={false}
  label="Enter things"
  name="toggle"
  onBlur="onblur"
  onChange="onchange"
/>
`;

exports[`components/toggle/ToggleField should render isOn=true with value=value 1`] = `
<Toggle
  isOn={true}
  label="Enter things"
  name="toggle"
  onBlur="onblur"
  onChange="onchange"
  value="value"
/>
`;
